fix: update dropdown-header styles for improved readability

--- a/src/stylesheets/components/_dropdown.scss
+++ b/src/stylesheets/components/_dropdown.scss
@@ -39,8 +39,10 @@
 }
 
 .dropdown-header {
-  @extend .fs-base;
+  @extend .fs-sm;
+  text-transform: uppercase;
   font-weight: $font-weight-bold;
+  padding-bottom: 0;
 }
 
 .dropdown {
